<resources>
    <!-- admob -->
    <string name="banner_ad_unit_id">ca-app-pub-9698618209747076/5158372949</string>

    <!-- app. -->
    <string name="app_name">Daily Weight Monitor</string>
    <string name="toolbar_title">Daily Weight Monitor</string>
    <string name="pref_toolbar_title">Settings</string>

    <!-- menu string -->
    <string name="menu_input">Input</string>
    <string name="menu_setting">Setting</string>

    <!-- ListView title -->
    <string name="lv_title_date">Date</string>
    <string name="lv_title_weight">Weight</string>
    <string name="lv_title_exercise">Exer.</string>
    <string name="lv_title_drink">Dri.</string>
    <string name="lv_title_memo">Memo</string>

    <!-- Input Dialog -->
    <string name="dialog_title">Input Weight</string>
    <string name="dialog_date">Date</string>
    <string name="dialog_weight">Weight</string>
    <string name="dialog_exercise">Exercise</string>
    <string name="dialog_drink">Drink</string>
    <string name="dialog_memo">Memo</string>
    <string name="dialog_btn_cancel">Cancel</string>
    <string name="dialog_btn_confirm">Confirm</string>
    <string name="dialog_btn_edit">Edit</string>

    <!-- Message -->
    <string name="msg_onemorepress">Press the \'Back\' button once more to exit</string>
    <string name="title_activity_settings">Settings</string>
    <string name="delete_all_title">Delete All Data</string>
    <string name="delete_all_message">All data will be erased. Do you wnat to continue?</string>

    <!-- Settings -->
    <string name="set_title_set">Setting</string>
    <string name="set_title_info">Information</string>
    <string name="set_auto_input_title">Show input dialog</string>
    <string name="set_auto_input_message">Show input dialog at startup</string>
    <string name="set_delete_all_title">Delete all data</string>
    <string name="set_delete_all_message">Delete all data</string>
    <string name="set_information">Information</string>
    <string name="set_version">Version 1.0.0</string>
    <string name="set_version_date">November 5, 2015</string>

    <!-- Upgrade Dialog -->
    <string name="upgrade_title">Daily Weight Monitor</string>
    <string name="upgrade_msg">There is Updated software for Daily Weight Monitor. Update Now?</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
